# Lorr

./: .gitignore  manage.py  package-lock.json  prod_manage.py  pyproject.toml
Lorr/: asgi.py  settings.py  urls.py  wsgi.py
Lorr/config/: asgi.py  urls.py  wsgi.py
Lorr/config/settings/: base_settings.py  dev_settings.py  prod_settings.py
Sissy/: asgi.py  settings.py  urls.py  wsgi.py
api/: permissions.py  serializers.py  urls.py  views.py  viewset.py
client/: package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.js  App.jsx
client/src/assets/styles/: colors.css
client/src/components/: BottomBar.jsx  Footer.jsx  Items.jsx  Navbar.jsx  Products.jsx  all-components.js
client/src/pages/: AdminHome.jsx  AdminLayout.jsx  Home.jsx  all-pages.js
main/: models.py  tests.py  urls.py  views.py
